@startuml

class AbstractDisplay {
    open()
    print()
    close()
    display()
}

class CharDisplay {
    open()
    print()
    close()
}

class StringDisplay {
    open()
    print()
    close()
}

AbstractDisplay <|-do- CharDisplay
AbstractDisplay <|-do- StringDisplay

note top of AbstractDisplay
    <size:10>AbstractClass
end note

note left of CharDisplay
    <size:10>ConcreteClass
end note

note right of StringDisplay
    <size:10>ConcreteClass
end note

@enduml